src/main/kotlin/com/example/gymi/global/error/exception/ErrorResponse.kt
package com.example.gymi.global.error.exception

data class ErrorResponse(
    val status: Int,
    val message: String
)